# DreamGrid

./: .gitignore  pyproject.toml  requirements.txt
data/: generate_transitions.py
datasets/: rollouts.py
datasets_utils/: images.py  transitions.py
env/: constants.py  generator.py  grid.py  palette.py  pathfinding.py  render.py  tile_palette.py
eval/: evaluate_dynamics_action_outcomes.py  evaluate_latent_dynamics.py  evaluate_latent_planners.py  evaluate_mpc_action_quality.py  evaluate_planners.py  evaluate_rollouts.py  evaluate_spatial_dynamics.py  evaluate_spatial_mpc_action_quality.py  evaluate_spatial_planners.py  evaluate_vq_planners.py  evaluate_vqvae.py  metrics.py  probe_latent_position.py  rollout_dataset.py  rollout_utils.py  visualize_categorical_reconstructions.py  visualize_latent_predictions.py  visualize_pixel_preds.py  visualize_reconstructions.py  visualize_rollouts.py  visualize_spatial_mpc_episode.py  visualize_tile_reconstruction.py  visualize_tile_reconstructions.py  visualize_vqvae_reconstructions.py
losses/: latent_dynamics.py
models/: autoencoder.py  blocks.py  categorical_autoencoder.py  latent_dynamics.py  spatial_dynamics.py  tile_autoencoder.py  tile_dynamics.py  vq_dynamics.py  vqvae.py
outputs/: final_results.txt  latent_dynamics.txt  probe_results.txt  rollout_evals.txt  spatial_planner_results.txt
planning/: episode.py  mpc_latent.py  mpc_spatial.py  mpc_vq.py  policies.py  scoring.py
scripts/: generate_transitions.py
training/: train_autoencoder.py  train_categorical_autoencoder.py  train_latent_dynamics.py  (+7 more)
(+40 files in other folders)
