[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamgrid"
version = "0.1.0"
description = "A visual world model for planning in a mini rescue simulator"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "tqdm",
    "pillow",
]

[tool.setuptools]
packages = ["env", "data", "models", "training", "eval"]